--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,8 @@
 {
   "presets": [
-    ["es2015"],
+    ["es2015", { modules: false }],
     "stage-2",
-    "react",
-    "react-boilerplate"
+    "react"
   ],
 
   "plugins": [
