--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,12 @@
 {
   "extends": "airbnb",
+
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
@@ -7,20 +14,9 @@
       "jsx": true
     }
   },
-  "env": {
-    "browser": true,
-    "node": true,
-    "mocha": true,
-    "es6": true
-  },
+
   "rules": {
-    "space-before-function-paren": "off",
-    "react/prefer-stateless-function": "warn",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "linebreak-style": "off",
-    "global-require": "off",
-    "semi": "warn",
-    "arrow-body-style": "off",
-    "comma-dangle": "off"
+    "comma-dangle": ["error", "never"],
+    "react/jsx-curly-spacing": ["error", {"when": "always"}]
   }
 }
