--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "html-webpack-plugin": "2.30.0",
     "jest": "21.1.0",
-    "node-sass": "4.5.3",
+    "node-sass": "^4.9.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "webpack": "3.6.0",
